# tg_analyzer

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTEXT_FOR_AI.md  Dockerfile  README.md  analysis_output.txt  answer_ru_python_2025-11-03.json  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_analysis_output.json  test_infrastructure.py
config/prompts/: analysis_prompt.txt
docs/: ANALYZER_IMPROVEMENTS_SESSION.md  ANALYZER_USAGE.md  DATA_STRUCTURE.md  FIRST_SUCCESS_MILESTONE.md  PHASE4_ANALYZER_DAEMON.md  PHASE5_QUALITY_ANALYSIS.md  PHASE5_QUALITY_IMPROVEMENTS.md  PRE_IMPLEMENTATION_CHECKLIST.md  PROJECT_SETUP_SUMMARY.md
docs/tech_task/: README.md  TZ-analyzer-architecture.md  TZ-base-infrastructure.md  TZ-batched-analysis.md  TZ-data-quality-improvements.md  TZ-improvements-quality-priority.md
scripts/: analysis_worker.py  analyze_all_ru_python.ps1  analyze_full_day.py  analyze_november_auto.ps1  analyze_raw_data.py  cmd_fetch_2025-11-09.json  create_test_data.py  listen_events.py  merge_discussions.py  queue_analysis_tasks.py  quickstart.ps1  show_stats.py  test_gigachat.py  test_infrastructure.py  test_real_analysis.py
src/: __init__.py
src/cli/: __init__.py  analyze.py  daemon.py
src/core/: config.py  exceptions.py
src/models/: __init__.py  analysis.py  gigachat.py  message.py
src/observability/: __init__.py  logging_config.py
src/repositories/: __init__.py  analysis_repository.py  message_repository.py
src/services/: __init__.py  analyzer_service.py  event_subscriber.py  gigachat_client.py  prompt_builder.py
src/utils/: __init__.py  correlation.py
tests/: __init__.py
